fix case in README
Change-Id: Ib156fc53e87f87b410695e9ca91efa2380e57134
Reviewed-by: Niels Weber <niels.2.weber@nokia.com>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-These are instructions to create the installer framework
+These are instructions to create the Installer Framework
 
 == Build ==
 To build an installer, it is advised to use a statically linked Qt.
