fix path to tests in README
Change-Id: I019e1af46c508f4577e8952475bb4c2275fb0649
Reviewed-by: Karsten Heimrich <karsten.heimrich@nokia.com>

--- a/README
+++ b/README
@@ -40,11 +40,11 @@ configure -nomake examples -nomake demos -qt-zlib -qt-libtiff -qt-libpng -qt-lib
 To create an installer, use binarycreator:
  
 in windows;
-cd installerbuilder
+cd tests\test-installer
 create-test-installer.bat
 
 in unix;
-cd installerbuilder
+cd tests/test-installer
 create-test-installer.sh
 
 This creates an installer "test-installer.exe"/"test-installer" from the installerbase binary and the components required by the com.nokia.testapp package(examples\testapp\packages\com.nokia.testapp).
