Remove recommended -no-svg switch for Windows
configure.exe doesn't know about -no-svg (Qt 4.8.3).

Also, remove -no-declarative-debug: It has no effect since
-no-declarative is already set.

Change-Id: Ib6733acf0cf1b10b70faaf2e2c09f323fde8e312
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/README
+++ b/README
@@ -30,7 +30,7 @@ To build an installer, it is advised to use a statically linked Qt.
  QMAKE_CFLAGS_LTCG       = -GL
 
 Recommended configure options for windows:
-configure.exe -platform win32-msvc20XX -release -static -no-webkit -no-phonon -no-dbus -no-opengl -no-qt3support -no-xmlpatterns -no-svg -no-multimedia -no-declarative -no-declarative-debug -nomake examples -nomake demos -qt-sql-sqlite -plugin-sql-sqlite -opensource
+configure.exe -platform win32-msvc20XX -release -static -no-webkit -no-phonon -no-dbus -no-opengl -no-qt3support -no-xmlpatterns -no-multimedia -no-declarative -nomake examples -nomake demos -qt-sql-sqlite -plugin-sql-sqlite -opensource
 
 Recommended configure options for Linux:
 configure -nomake examples -nomake demos -qt-zlib -qt-libtiff -qt-libpng -qt-libmng -qt-libjpeg -opensource -developer-build -static -no-webkit -no-phonon -no-dbus -no-opengl -no-qt3support -no-xmlpatterns -no-svg -release
