we never used "-" in in this README file
Change-Id: Ia83382fb542958986e1a494af8f5766ca9ee393a
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ These are instructions to create the Installer Framework
 To build an installer, it is advised to use a statically linked Qt.
 
 == Qt configuration under Windows ==
-- adjust the qmake.conf to have a real stand alone working installer(at the moment we are using msvc2005, but it should work with msvc2008 aswell)
+adjust the qmake.conf to have a real stand alone working installer(at the moment we are using msvc2005, but it should work with msvc2008 aswell)
 
 --- a/mkspecs/win32-msvc20XX/qmake.conf
 +++ b/mkspecs/win32-msvc20XX/qmake.conf
