--- a/README
+++ b/README
@@ -2,6 +2,7 @@ These are instructions to create the Installer Framework
 
 == Build ==
 To build an installer, it is advised to use a statically linked Qt.
+At the moment, only building with Qt 4.8.x is supported.
 
 == Qt configuration under Windows ==
 adjust the qmake.conf to have a real stand alone working installer (at the moment we are using msvc2005, but it should work with msvc2008 as well)
