--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 1.4.1
 - Added support to pass a query string when downloading archives. (QTIFW-329)
+- Fixed progress display for redirected HTTP Downloads. (QTIFW-267)
+- Add support to repogen to update only newer components. (QTIFW-234)
+- Added more autotests.
+- Improved documentation.
+- Minor bugfixes.
 
 1.4
 - Force updating of Essential components. (QTIFW-38, QTIFW-155)
@@ -44,6 +49,7 @@
 - Minor documentation fixes and additions.
 - Added more autotests.
 - Bugfixes
+- Added Japanese translation.
 - Updated translations
 - Cleaned up the Code.
 
