Fix typo in INSTALL
Change-Id: Icd4991f9d9e30b9698f33f6551fcbad9e4f8a694
Reviewed-by: Niels Weber <niels.weber@digia.com>

--- a/INSTALL
+++ b/INSTALL
@@ -63,7 +63,7 @@ Qt 4.8:
 configure -opensource -release -static -accessibility -qt-zlib -qt-libtiff -qt-libpng -qt-libmng -qt-libjpeg -no-phonon -no-dbus -no-opengl -no-qt3support -no-webkit -no-xmlpatterns -no-svg -nomake examples -nomake demos
 
 Qt 5:
-configure -opensource -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-dbus -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip declarative
+configure -opensource -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-dbus -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtdeclarative
 
 Build the Framework
 ---------------------
