Fix tutorial example
- remove translations part
- replace installation dir (root) with home
  in order to properly finish the installer wizard
  with default values
- AllowSpaceInPath is now true by default (ChangeLog updated)

Change-Id: I84e372ac4da05964d90851bf592fc87ee9409e3b
Reviewed-by: Kai Koehne <kai.koehne@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2.0
+- Change the default value of AllowSpaceInPath in config.xml to true
+
 1.5.1
 - The checkupdates option handles no-network situations better. (QTIFW-431)
 - Fixed random crash while accessing arguments.
