Fix information for building static Qt
Change-Id: I376f1312d4b606fc75ea64331895a905f57f6f28
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

--- a/INSTALL
+++ b/INSTALL
@@ -25,7 +25,7 @@ See the Qt documentation for the prerequisites and steps to build Qt from source
 
 Adjust the qmake.conf to have a real stand alone working installer:
 
-- add 'embed_manifest_dll embed_manifest_exe' to CONFIG line
+- remove 'embed_manifest_dll embed_manifest_exe' from CONFIG line
 - replace -MD, -MDd with -MT, -MTD in the CFLAGS lines
 
 'git diff' should show you something like:
