Linux: Add -qt-xcb to recommended configure flags
Also drop trailing './' in command line, and adapt to new Mac
naming conventions: The OS is just "OS X", not "Mac OS X" anymore.

Change-Id: I95c18080261e54ed8abe1b9307340e834934fb61
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/INSTALL
+++ b/INSTALL
@@ -57,11 +57,18 @@ Recommended configure options for Microsoft Windows:
 
 configure -prefix %CD%\qtbase -release -static -target xp -no-opengl -no-icu -nomake examples -nomake tests -skip qtactiveqt -skip qtlocation -skip qtscript -skip qtsensors
 
-### Linux & Mac OS X
+### Linux
 
-Recommended configure options for Linux and Mac OS X:
+Recommended configure options for Linux:
 
-./configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-xcb -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
+
+### OS X
+
+Recommended configure options for OS X:
+
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
+
 
 Build the Framework
 ---------------------
