--- a/INSTALL
+++ b/INSTALL
@@ -67,7 +67,7 @@ configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpn
 
 Recommended configure options for OS X:
 
-configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
 
 
 Build the Framework
