Replace 'configure options' by 'configuration options'
This makes INSTALL in line with getting-started.

Change-Id: I36e1141785c9068c03f653aa2d3d6cd3c347159e
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@digia.com>

--- a/INSTALL
+++ b/INSTALL
@@ -53,19 +53,19 @@ Adjust the qmake.conf to have a real stand alone working installer:
  QMAKE_CFLAGS_YACC       =
  QMAKE_CFLAGS_LTCG       = -GL
 
-Recommended configure options for Microsoft Windows:
+Recommended configuration options for Microsoft Windows:
 
 configure -prefix %CD%\qtbase -release -static -target xp -no-opengl -no-icu -nomake examples -nomake tests -skip qtactiveqt -skip qtlocation -skip qtscript -skip qtsensors
 
 ### Linux
 
-Recommended configure options for Linux:
+Recommended configuration options for Linux:
 
 configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-xcb -no-opengl -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
 
 ### OS X
 
-Recommended configure options for OS X:
+Recommended configuration options for OS X:
 
 configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -nomake examples -nomake tests -developer-build -skip qtquick1 -skip qtscript -skip qtlocation
 
