Rename settings in config.xml file
Rename UninstallerName to MaintenanceToolName
(change its default value to "maintenancetool").
Rename UninstallerIniFile to MaintenanceToolIniFile.

Change-Id: Ic8ceae80b43c6793ae9b0baacea2ea374a0f90d1
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

--- a/Changelog
+++ b/Changelog
@@ -16,6 +16,9 @@
 - Improved documentation.
 - Documentation fixes
 - Only support Qt 5 on documentation side as well.
+- Renamed settings inside config.xml:
+  - UninstallerName renamed to MaintenanceToolName (default value changed to "maintenancetool")
+  - UninstallerIniFile renamed to MaintenanceToolIniFile
 
 Thanks go to Sze Howe Koh, Ray Donnelly and Sascha Cunz for contributions.
 
