Windows: Write verbose output into parent console
Don't open a new console window for verbose output if we got
launched from a console already, but attach to the parent
console.

This allows users to e.g. pipe the verbose output to a file.

Change-Id: Ie602bdd18ef48b576e4b90806541709394882735
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/Changelog
+++ b/Changelog
@@ -19,6 +19,7 @@
 - Renamed settings inside config.xml:
   - UninstallerName renamed to MaintenanceToolName (default value changed to "maintenancetool")
   - UninstallerIniFile renamed to MaintenanceToolIniFile
+- Windows: Re-use parent console for verbose output if possible
 
 Thanks go to Sze Howe Koh, Ray Donnelly and Sascha Cunz for contributions.
 
