Remove Qt Creator specific operations
These have been superseded by SettingsOperation

Change-Id: I268f40b8246cb4735eea58650a1439e5ffbd8553
Reviewed-by: Karsten Heimrich <karsten.heimrich@theqtcompany.com>

--- a/Changelog
+++ b/Changelog
@@ -37,6 +37,7 @@
 - Removed some deprecated things.
 - Improved documentation. (QTIFW-526)
 - Updated and improved translations.
+- Removed SetQtCreatorArrayValue, AddQtCreatorArrayValue operations.
 
 Thanks go to Christoph Vogtländer, Sze Howe Koh, Ray Donnelly, Tasuku Suzuki and Sascha Cunz for contributions.
 
