Unify the output name to match the README file description.
Fix the dynamic page example to compile the additional resource.

Change-Id: I62a641f05c4ac76649951695ea5c2d03a390ee8d
Reviewed-by: Niels Weber <niels.weber@digia.com>

--- a/examples/quit_installer/README
+++ b/examples/quit_installer/README
@@ -2,5 +2,5 @@ Shows how to quit an installer from script side.
 
 Generate installer with
 
-binarycreator --offline-only -c config/config.xml -p packages ask_to_quit_installer
+binarycreator --offline-only -c config/config.xml -p packages installer
 
