--- a/examples/startmenu/README
+++ b/examples/startmenu/README
@@ -2,5 +2,5 @@ Shows how to add an entry to the Windows start menu.
 
 Generate installer with
 
-binarycreator --offline-only -c config/config.xml -p packages start_menu_installer
+binarycreator --offline-only -c config/config.xml -p packages installer
 
